[package]
name = "MyBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }  # Use runtime-tokio-rustls for compatibility
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"